# ipapi-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: ci.yml
include/: ipapi.h
src/: ipapi.cpp
test/: ipapi_test.cpp
